<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.examples.galochkin.githublookup.activity.SearchUserActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin"
        android:contentDescription="@string/image_logo"
        android:src="@drawable/github_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name_textinputlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Medium">

        <EditText
            android:id="@+id/user_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/find_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/element_view_margin"
        android:enabled="false"
        android:text="@string/find_user"
        android:textColor="@color/colorCardBackground"
        android:theme="@style/RaisedButton" />
</LinearLayout>
